--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "main": false
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon server.js",
+    "start": "node server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "build": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled",
