--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.30.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
